plugins {
    id 'java'
}

sourceCompatibility = 14

group 'me.shadowchild.candor'
version '1.0-SNAPSHOT'

repositories {

    jcenter()
    mavenCentral()

    maven { url 'https://dl.bintray.com/candor/candor-alpha' }
}

dependencies {

    // Uncomment this to use a local candor jar
//    implementation files('/libs/CandorManager-snapshot.jar')
    // This will pull from bintray
    implementation 'me.shadowchild.candor:candor-full:snapshot-0.1'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

jar {

    manifest {

        attributes 'Candor-Module-Class': 'me.shadowchild.candor.sims4.Sims4Module'
    }
}
